--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+:root {
+    color-scheme: dark;
+}
 
 * {
     font-family: "Poppins", sans-serif;
@@ -18,10 +20,22 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background: rgba(88, 88, 88, 0.849);
+    background: rgba(88, 88, 88, 0.6);
     border-radius: 20px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: rgba(88, 88, 88, 1);
+    background: rgba(88, 88, 88, 0.8);
+}
+
+@media (max-width: 500px) {
+    .custom-scrollbar::-webkit-scrollbar {
+        width: 6px;   
+    }
+
+    /** for handling image slider arrows, so they will disapear in the small screens */
+    button[data-type="next"],
+    button[data-type="prev"] {
+        display: none !important;
+    }
 }
