--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,27 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin '@tailwindcss/forms';
+
+@theme {
+    --color-background: #202029;
+    --color-background-foreground: #FFFFFF;
+
+    --color-primary-50: var(--color-teal-50);
+    --color-primary-100: var(--color-teal-100);
+    --color-primary-200: var(--color-teal-200);
+    --color-primary-300: var(--color-teal-300);
+    --color-primary-400: var(--color-teal-400);
+    --color-primary-500: var(--color-teal-500);
+    --color-primary-600: var(--color-teal-600);
+    --color-primary-700: var(--color-teal-700);
+    --color-primary-800: var(--color-teal-800);
+    --color-primary-900: var(--color-teal-900);
+    --color-primary-950: var(--color-teal-950);
+}
 
 :root {
     color-scheme: dark;
+
+    --test: #202029;
 }
 
 * {
@@ -30,7 +48,7 @@
 
 @media (max-width: 500px) {
     .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;   
+        width: 6px;
     }
 
     /** for handling image slider arrows, so they will disapear in the small screens */
